--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get_it: ^7.7.0
   sqflite: ^2.3.3+1
   path_provider: ^2.1.4
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   mockito: ^5.0.8
@@ -41,6 +42,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   logger: ^2.5.0
+  bloc_test: ^10.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
